--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
 
 #root{
   width: 100vw;
-  height: 100vh;
+  height: 100%;
   padding: 2rem 7rem;
 }
 
@@ -17,7 +17,7 @@
 
 body{
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
   padding: 0;
   margin: 0 auto;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -25,7 +25,9 @@ body{
   --webkit-font-smoothing: antialiased;
   --moz-osx-font-smoothing: grayscale;
   background: url('https://img.freepik.com/foto-gratis/estudio-gris-vacio-liso-abstracto-bien-uso-como-fondo-informe-comercial-digital-plantilla-sitio-web-telon-fondo_1258-55967.jpg?w=2000');
+  background-size: cover;
 }
+
 
 .layout{
   display: flex;
@@ -41,6 +43,11 @@ body{
   background-color:rgba(255, 255, 255, 0.103);
   border-radius: 20px;
   margin: 1rem 0;
+  position: relative;
+}
+
+.menu-button, .close-button {
+  display: none;
 }
 
 ul{
@@ -121,7 +128,7 @@ li a{
 }
 
 .city-container h1{
-  font-size: 9rem;
+  font-size: clamp(5rem, 6rem, 9rem);
 }
 
 .top{
@@ -129,7 +136,7 @@ li a{
   flex-direction: column;
   align-items: center;
   width: 100%;
-  padding: 2rem 0 4rem 0;
+  padding: 2rem 0 2rem 0;
 }
 
 .img-temp-container{
@@ -173,6 +180,7 @@ li a{
   display: flex;
   justify-content: center;
   align-items: center;
+  gap: 0.2rem;
 }
 
 .feels, .humidity, .wind, .rain-forecast, .snow{
@@ -185,6 +193,10 @@ li a{
 .feels p, .humidity p, .wind p, .rain-forecast p, .forecast-font{
   margin: 0 auto;
   font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.display-none{
+  display: none;
 }
 
 /* Fin estilos para la ciudad actual */
@@ -214,6 +226,7 @@ li a{
   border-radius: 20px;
   background-color: rgba(255, 255, 255, 0.103);
   flex-wrap: wrap;
+  gap: 1rem;
 }
 
 .day {
@@ -272,4 +285,232 @@ li a{
   font-weight: 600;
   margin-top: -2rem;
 }
-/* Fin estilos para otras ciudadesa */
+/* Fin estilos para otras ciudades */
+
+@media screen and (min-width: 845px) and (max-width: 1125px) { /* Portatiles */
+  .layout{
+    padding: 0 2rem;
+    height: 90vh;
+  }
+
+  li a{
+    font-size: 15px;
+  }
+
+  .city-container{
+    gap: 1rem;
+  }
+
+  .city-container .City{
+    font-size: 2rem;
+  }
+  
+  .city-container h2{
+    font-size: 1rem;
+}
+  
+  .city-container p{
+    font-size: 0.8rem;
+  }
+  
+  .city-container h1{
+    font-size: 5.8rem;
+  }
+
+  .top{
+    padding: 1rem 0 0rem 0;
+  }
+
+  .img-temp-container{
+    gap: 1rem;
+  }
+
+  .bottom{
+    margin-bottom: 1rem;
+    flex-wrap: wrap;
+  }
+
+  .feels, .humidity, .wind, .rain-forecast, .snow{
+    gap: 0.4rem;
+    padding: 0.9rem;
+  }
+}
+
+@media screen and (min-width: 605px) and (max-width: 844px) { /* Tablets */
+  .layout{
+    padding: 0 2rem;
+  }
+
+  li a{
+    font-size: 15px;
+  }
+
+  .city-container{
+    gap: 1rem;
+  }
+
+  .city-container .City{
+    font-size: 2rem;
+  }
+  
+  .city-container h2{
+    font-size: 1rem;
+}
+  
+  .city-container p{
+    font-size: 0.8rem;
+  }
+  
+  .city-container h1{
+    font-size: 5.8rem;
+  }
+
+  .top{
+    padding: 1rem 0 0rem 0;
+  }
+
+  .img-temp-container{
+    gap: 1rem;
+  }
+
+  .bottom{
+    margin-bottom: 1rem;
+    flex-wrap: wrap;
+  }
+}
+
+@media screen and (max-width: 604px) {/* Moviles */
+
+  #root{
+    height: 100%;
+    padding: 5% 10%;
+  }
+
+  body{
+    height: 100%;
+  }
+  
+  .layout{
+    border-radius: 20px;
+    padding: 0 1rem;
+    height: 100%;
+    align-items: center;
+  }
+
+  .header-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+  }
+
+  ul{
+    flex-direction: column;
+    align-items: center;
+    display: flex;
+    align-items: center;
+    padding: 0.5rem;
+  }
+
+  li{
+    display: flex;
+    transition: all 0.2s ease-in-out;
+  }
+
+  .nav-links{
+    opacity: 0;
+    transform: translateY(-100%);
+    transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
+  }
+
+  .nav-active {
+    opacity: 1;
+    transform: translateY(0%);
+  }
+
+  .menu-button, .close-button{
+    display: block;
+    border: none;
+    border-radius: 10px;
+    padding: 0.5rem 1rem;
+    background-color: transparent;
+    color: #fff;
+    font-size: 1.2rem;
+    cursor: pointer;
+    transition: all 0.2s ease-in-out;
+  }
+
+  li a{
+    font-size: 14px;
+  }
+
+  .city-container{
+    gap: 1rem;
+  }
+
+  .city-container .City{
+    font-size: 1rem;
+  }
+  
+  .city-container h2{
+    font-size: 1rem;
+}
+  
+  .city-container p{
+    font-size: 0.8rem;
+  }
+  
+  .city-container h1{
+    font-size: 4rem;
+  }
+
+  .top{
+    padding: 1rem 0 1rem 0;
+  }
+
+  .img-temp-container{
+    gap: 0.2rem;
+  }
+
+  .bottom{
+    margin-bottom: 1rem;
+    flex-wrap: wrap;
+  }
+
+  .week-weather {
+    justify-content: center;
+    padding: 1.5rem;
+    margin-bottom: 3rem;
+  }
+
+  .city-select{
+    width: 100%;
+    height: 35px;
+  }
+  
+  .selected-city{
+    font-size: 2.7rem;
+    font-weight: 600;
+    margin-top: -2rem;
+  }
+}
+@media screen and (min-width: 605px) {
+
+  .layout{
+    height: 100%;
+  }
+  .nav-links {
+    display: flex;
+    opacity: 0;
+    transform: translateY(-100%);
+    transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
+  }
+  .nav-active {
+    opacity: 1;
+    transform: translateY(0%);
+  }
+  .menu-button {
+    display: none;
+  }
+}
+
