--- a/src/App.css
+++ b/src/App.css
@@ -404,6 +404,11 @@ li a{
     width: 100%;
   }
 
+  .img-temp-container{
+    display: flex;
+    flex-direction: column;
+  }
+
   ul{
     flex-direction: column;
     align-items: center;
