--- a/src/App.css
+++ b/src/App.css
@@ -391,7 +391,7 @@ li a{
   }
   
   .layout{
-    border-radius: 20px;
+    border-radius: 0;
     padding: 0 1rem;
     height: 100%;
     align-items: center;
